# cloud-release-channels-demo

./: README.md  index.html  package.json  pnpm-lock.yaml  publish.js
.github/workflows/: deploy.yml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
