[package]
name = "cloud-release-channels-demo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cloud_release_channels_demo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
thiserror = "1"
tauri = { version = "2.1.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tauri-plugin-process = "2.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.1.0"
